# farmafacil

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPROVEMENT-PLAN.md  README.md  docker-compose.yml  pyproject.toml
.claude/commands/: farmafacil-new-feature.md  farmafacil-review.md  farmafacil-update.md
.claude/hooks/: session-start.sh
docs/: adding-pharmacies.md  api-reference.md  architecture.md  bot-flow.md  chamo-farmafacil-skill.md  deployment.md  implementation-plan.md  troubleshooting.md
scripts/: audit_chain_detection.py
src/farmafacil/: __init__.py  config.py
tests/: conftest.py  test_admin_chat.py  test_admin_geocode_tools.py  test_admin_stats.py  test_admin_user_form.py  test_ai_role_scope.py  test_ai_roles.py  test_api.py  test_audio_endpoint.py  test_backlog_fixes.py  test_best_price.py  test_bot.py  test_catalog_rephrase.py  test_category_menu.py  test_chat_debug.py  test_chat_endpoint.py  test_chat_image_endpoint.py  test_chat_voice_endpoint.py  test_clarification.py  test_classify_bugs.py  test_delivery_display.py  test_drug_interactions.py  test_drug_liability.py  test_drug_translation.py  test_farmatodo_scraper.py  test_feedback_suppression.py  test_file_manager.py  test_format_nearby_stores.py  test_handler.py  test_image_analysis.py  test_image_grid.py  test_image_preprocessing.py  test_inline_location_change.py  test_intent.py  test_locatel_scraper.py  test_location.py  test_location_confirm_and_dedup.py  test_location_pin_temp.py  test_location_prefix_and_store_info.py  test_location_sharing.py  (+36 more)
(+72 files in other folders)
